<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/profile" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Your name"
            android:textColor="@color/nav_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/fullName"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Email"
            android:textColor="@color/nav_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Mobile number"
            android:textColor="@color/nav_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_action_phone"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Location"
            android:textColor="@color/nav_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_action_location"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/location"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/colorAccent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/changePicture"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inactive_btn"
                android:text="Change picture"
                android:textColor="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/edit_info"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inactive_btn"
                android:text="Edit info"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
